Added skills, relocated
Updated to work from new dir location, and added some more skill slots.

--- a/load.html
+++ b/load.html
@@ -37,7 +37,29 @@
                 Name: <input type="text" name="query_name" />
                 Text: <input type="text" name="query_text" />
                 Type: <input type="text" name="query_type" />
-                Slot: <input type="text" name="query_slot" />
+                Slot: <select type="text" name="query_slot">
+                    <option value=""></option>
+                    <option value="ability">Ability</option>
+                    <option value="ability upgrade">Ability upgrade</option>
+                    <option value="armor">Armor</option>
+                    <option value="armor upgrade">Armor upgrade</option>
+                    <option value="calling">Calling</option>
+                    <option value="curse">Curse</option>
+                    <option value="gift">Gift</option>
+                    <option value="heritage">Heritage</option>
+                    <option value="main hand shield">Main hand shield</option>
+                    <option value="main hand shield upgrade">Main hand shield upgrade</option>
+                    <option value="main hand weapon">Main hand weapon</option>
+                    <option value="main hand weapon upgrade">Main hand weapon upgrade</option>
+                    <option value="offhand shield">Offhand shield</option>
+                    <option value="offhand shield upgrade">Offhand shield upgrade</option>
+                    <option value="offhand weapon">Offhand weapon</option>
+                    <option value="offhand weapon upgrade">Offhand weapon upgrade</option>
+                    <option value="two handed ranged weapon">Two handed ranged weapon</option>
+                    <option value="two handed ranged weapon upgrade">Two handed ranged weapon upgrade</option>
+                    <option value="two handed weapon">Two handed weapon</option>
+                    <option value="two handed weapon upgrade">Two handed weapon upgrade</option>
+                </select>
                 Level: <input type="text" name="query_level" />
                 <input type="submit" value="Filter" />
             </form>
