New DB items and small updates.
A bunch of new JSON objects for the database, plus a few refactorings
(like changing the load pages to codex).

--- a/codex.html
+++ b/codex.html
@@ -13,6 +13,8 @@
         <!-- end fonts -->
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/codex.css" />
+        <link rel="stylesheet" type="text/css" href="css/doc.css" />
+        <link rel="stylesheet" type="text/css" href="css/doc_buttons_codex.css" />
         <link rel="stylesheet" type="text/css" href="css/header.css" />
         <link rel="stylesheet" type="text/css" href="css/tiles.css" />
         <link rel="stylesheet" type="text/css" href="css/tile_icons.css" />
