--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                     <div class="bottomRowContainer">
                         <div class="level">LEVEL</div>
                         <div class="levelBox clickable" data-level="1"></div>
+                        <div class="levelBox" data-level="2"></div>
                     </div>
                 </div>
                 <div class="tile background one_handed_shield upgrade" data-instance="1">
@@ -198,6 +199,7 @@
                     <div class="bottomRowContainer">
                         <div class="level">LEVEL</div>
                         <div class="levelBox clickable" data-level="1"></div>
+                        <div class="levelBox" data-level="2"></div>
                     </div>
                 </div>
                 <div class="tile background one_handed_shield upgrade" data-instance="2">
